[New] Add support for Personal Access Tokens
- Implemented CreatePersonalAccessTokenArgument and PersonalAccessTokenRep
- Added PrivilegeElementFromJsonVisitor and PrivilegeElementToJsonVisitor support
- Updated DefaultPrivilegeHandler and PrivilegeCrudHandler to manage PATs
- Added unit tests for PAT functionality

Co-authored-by: Junie <junie@jetbrains.com>